--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,9 +5,20 @@
   <view class="nav_warp">
     <!-- 自己滚动的组件 -->
     <scroll-view class="nav" scroll-x>
-      <view class="nav_item {{currentIndexNav ===index ? 'active' : ''}}" bindtap="activeNav" data-index="{{index}}" wx:for="{{navList}}" wx:key="{{index}}">
+      <view class="nav_item {{currentIndexNav ===index ? 'active' : ''}}" bindtap="activeNav" data-index="{{index}}" wx:for="{{navList}}" wx:key="index">
         {{item.text}}
       </view>
     </scroll-view>
   </view>
+  <!-- 轮播图组件 -->
+  <view class="slides">
+    <swiper autoplay indicator-dots circular>
+      <swiper-item wx:for="{{swiperList}}" wx:key="index">
+        <navigator>
+          <image src="{{item.imgSrc}}"></image>
+        </navigator>
+      </swiper-item>
+  </swiper>
+  </view>
+
 </view>
