--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,5 +20,32 @@
       </swiper-item>
   </swiper>
   </view>
-
+  <!-- 视频列表数据 -->
+  <view class="video_wrap">
+    <navigator class="video_item" wx:for="{{videosList}}" wx:key="index">
+      <!-- image -->
+      <view class="video_img">
+        <!-- 图片 -->
+        <image mode="widthFix" src="{{item.imgSrc}}"></image>
+        <view class="video_info">
+          <!-- 播放量 -->
+          <view class="play_count_wrap">
+            <!-- 图标 -->
+            <text class="fa fa-play-circle-o"></text>
+            <!-- 数值  -->
+            <text class="play_count">{{item.playCount}}</text>
+          </view>
+          <!-- 评论量 -->
+          <view class="comment_count_wrap">
+            <!-- 图标 -->
+            <text class="fa fa-commenting-o"></text>
+            <!-- 数值  -->
+            <text class="comment_count">{{item.commentCount}}</text>
+          </view>
+        </view>
+      </view>
+      <!-- title -->
+      <view class="video_title">{{item.desc}}</view>
+    </navigator>
+  </view>
 </view>
