--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -30,3 +30,40 @@ page{
   width: 100%;
   height: 100%;
 }
+
+/* 列表数据 */
+.video_wrap{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5rpx;
+  justify-content: space-between;
+}
+.video_item{
+  width: 48%;
+  margin-bottom: 20rpx;
+}
+.video_img{ position: relative;}
+.video_img image{
+  width: 100%;
+  border-radius: 15rpx;
+}
+.video_img .video_info{
+  position: absolute;
+  bottom: 16rpx;
+  left:0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 24rpx;
+}
+
+.video_title{
+  font-size: 28rpx;
+  display: -webkit-box;
+  white-space: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
