--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -22,7 +22,7 @@
   </view>
   <!-- 视频列表数据 -->
   <view class="video_wrap">
-    <navigator class="video_item" wx:for="{{videosList}}" wx:key="index">
+    <navigator url="../detail/detail?id={{item.id}}" class="video_item" wx:for="{{videosList}}" wx:key="index">
       <!-- image -->
       <view class="video_img">
         <!-- 图片 -->
