--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -24,4 +24,25 @@
     </view>
 
   </view>
+  <!-- 推荐视频 -->
+  <view class="other_list">
+    <navigator class="item_other" wx:for="{{otherList}}" wx:key="index">
+      <!-- 图片容器 -->
+      <view class="other_img_wrap">
+        <image mode="widthFix" src="{{item.imgSrc}}"></image>
+      </view>
+      <!-- 视频详情 -->
+      <view class="other_info">
+        <!-- 标题 -->
+        <view class="other_title">{{item.title}}</view>
+        <!-- 播放量 -->
+        <view class="other_detail">
+          <!-- 播放量 -->
+          <text class="play_count">{{item.playMsg}}次观看</text>
+          <!-- 评论 -->
+          <text class="comment_count">{{item.commentCount}}弹幕</text>
+        </view>
+      </view>
+    </navigator>
+  </view>
 </view>
