--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -19,3 +19,38 @@
 .video_detail .author{
   color:#000;
 }
+
+/* 推荐 */
+.other_list{
+  padding: 10rpx;
+}
+.item_other{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10rpx;
+}
+.other_img_wrap{
+  width: 38%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.other_img_wrap image{
+  width: 90%;
+  border-radius: 15rpx;
+}
+.other_info{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.other_title{
+  font-size: 28rpx;
+  color:#e06f93;
+}
+.other_detail{
+  font-size: 24rpx;
+  color:#666;
+}
+
